--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">One Page Wonder</h1>
                     <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
+                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Upload Images</a>
+                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Launch ar</a>
                 </div>
+                
             </div>
             <div class="bg-circle-1 bg-circle"></div>
             <div class="bg-circle-2 bg-circle"></div>
