added image and updated text in description boxes

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid " src="assets/img/01.jpg" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/04.jpeg" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">For those about to rock...</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <h2 class="display-4">Our Goal</h2>
+                            <p>Our program intends to connect community members with eachother. This interactive social media platform removes toxic metrics such as likes, views, and followers to focus purely on the aspects of image and video sharing. We aim to help people feel closer and less lonely, without the harmful comparing associated with other media-sharing platforms.</p>
                         </div>
                     </div>
                 </div>
@@ -64,12 +64,14 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/02.jpg" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/04.jpeg" alt="..." /></div>
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4">We salute you!</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <h2 class="display-4">Key Features</h2>
+                            <p>Personal accounts incorporate password security to protect user identities. <br>
+                                Augmented reality is used to create an immersive media-consumtion platform. <br>
+                                Actions were taken to foster an positive-experience oriented environment</p>
                         </div>
                     </div>
                 </div>
