added new files and updated stuff

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="#page-bottom">AR Project Queens QHACKS</a>
+                <a class="navbar-brand" href="index.html">AR Project Queens QHACKS</a>
                 <!-- <h1 class="nav-item">Subheading!</h1> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#!">Sign Up</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Log In</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html#scroll">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,8 +37,8 @@
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">AR PROJECT</h1>
                     <h2 class="masthead-subheading mb-0">Share Your Pictures in AR</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Upload Images</a>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Launch ar</a>
+                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="upload.html">Upload Images</a>
+                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scoll">Launch ar</a>
                 </div>
                 
             </div>
@@ -51,7 +52,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/01.jpg" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/05.jpeg" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
