edited the login page

--- a/login.html
+++ b/login.html
@@ -33,17 +33,19 @@
         </nav>
         <!-- Form for login -->  
         <section>
-            <div>      
-                <form id="signup form" class="form">
-                    <label for="uname">Username:</label><br>
-                    <input type="text" placeholder="username" id="uname" name="uname"><br>
+            <header class="masthead text-center">
+                <div class="rounded-pill border-4">      
+                    <form id="signup form" style="background-color: black;" class="form rounded-pill">
+                        <label for="uname">Username:</label><br>
+                        <input type="text" placeholder="username" id="uname" name="uname"><br>
 
-                    <label for="lname">Password:</label><br>
-                    <input type="text" placeholder="password" id="passowrd" name="password"><br>
-                    
-                    <input type="submit" value="log in">
-                </form>
-            </div>
+                        <label for="lname">Password:</label><br>
+                        <input type="text" placeholder="password" id="password" name="password"><br>
+                        
+                        <input type="submit" value="Log In">
+                    </form>
+                </div>
+            </header>
         </section>
 
 
