--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </section>
         <!-- Content section 3-->
-        <section>
+        <!-- <section>
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
@@ -96,10 +96,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Footer-->
         <footer class="py-5 bg-black" id="page-bottom">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2021</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">Victor Sandru, Matthew Nguyen, Daniel Dinari, Oscar</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
