updated css styles for rectangles used for boxes, and formated submission forms

--- a/login.html
+++ b/login.html
@@ -33,16 +33,16 @@
         </nav>
         <!-- Form for login -->  
         <section>
-            <header class="masthead text-center">
-                <div class="rounded-pill border-4">      
-                    <form id="signup form" style="background-color: black;" class="form rounded-pill">
-                        <label for="uname">Username:</label><br>
-                        <input type="text" placeholder="username" id="uname" name="uname"><br>
+             <header class="masthead text-center">
+                <div class="rounded-pill border-2">      
+                    <form id="signup form" class="login-rectangle" >
+                        <label class="navbar-brand" style="color:white"for="uname">Username:</label><br>
+                        <input type="text" placeholder="username"  class="navbar-brand" id="uname" name="uname"><br>
 
-                        <label for="lname">Password:</label><br>
-                        <input type="text" placeholder="password" id="password" name="password"><br>
-                        
-                        <input type="submit" value="Log In">
+                        <label class="navbar-brand" style="color:white" for="lname">Password:</label><br>
+                        <input type="text" placeholder="password"  class="navbar-brand" id="password" name="password"><br>
+                        <br>
+                        <input type="submit" class="navbar-brand" value="Log In">
                     </form>
                 </div>
             </header>
