fixed simple typos, put password id on HTML. updated landing page with temporary name.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="index.html">AR Project Queens QHACKS</a>
+                <a class="navbar-brand" href="index.html">ARConnect</a>
                 <!-- <h1 class="nav-item">Subheading!</h1> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -35,8 +35,8 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">AR PROJECT</h1>
-                    <h2 class="masthead-subheading mb-0">Share Your Pictures in AR</h2>
+                    <h1 class="masthead-heading mb-0">ARConnect</h1>
+                    <h2 class="masthead-subheading mb-0">Share Your Pictures in Augmented Reality</h2>
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="upload.html">Upload Images</a>
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scoll">Launch ar</a>
                 </div>
@@ -57,7 +57,7 @@
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">Our Goal</h2>
-                            <p>Our program intends to connect community members with eachother. This interactive social media platform removes toxic metrics such as likes, views, and followers to focus purely on the aspects of image and video sharing. We aim to help people feel closer and less lonely, without the harmful comparing associated with other media-sharing platforms.</p>
+                            <p>Our program intends to connect community members with each other. This interactive social media platform removes toxic metrics such as likes, views, and followers to focus purely on the aspects of image and video sharing. We aim to help people feel closer and less lonely, without the harmful comparing associated with other media-sharing platforms.</p>
                         </div>
                     </div>
                 </div>
@@ -73,9 +73,11 @@
                     <div class="col-lg-6">
                         <div class="p-5">
                             <h2 class="display-4">Key Features</h2>
-                            <p>Personal accounts incorporate password security to protect user identities. <br>
-                                Augmented reality is used to create an immersive media-consumtion platform. <br>
-                                Actions were taken to foster an positive-experience oriented environment</p>
+                            <ul>
+                                <li>Personal accounts incorporate password security to protect user identities.</li>
+                                <li>Augmented reality is used to create an immersive media-consumption platform.</li>
+                                <li>Keep in touch (literally!) with AR technology with your friends and family.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -99,7 +101,7 @@
         </section> -->
         <!-- Footer-->
         <footer class="py-5 bg-black" id="page-bottom">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Victor Sandru, Matthew Nguyen, Daniel Dinari, Oscar</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">Victor Sandru, Matthew Nguyen, Daniel Dinari, Oscar<br>@QHACKS 2022</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
