--- a/login.html
+++ b/login.html
@@ -36,11 +36,11 @@
              <header class="masthead text-center">
                 <div class="rounded-pill border-2">      
                     <form id="signup form" class="login-rectangle" >
-                        <label class="navbar-brand" style="color:white"for="uname">Username:</label><br>
+                        <label class="navbar-brand" style="color:white"for="uname">USERNAME:</label><br>
                         <input type="text" placeholder="username"  class="navbar-brand" id="uname" name="uname"><br>
 
-                        <label class="navbar-brand" style="color:white" for="lname">Password:</label><br>
-                        <input type="text" placeholder="password"  class="navbar-brand" id="password" name="password"><br>
+                        <label class="navbar-brand" style="color:white" for="lname">PASSWORD:</label><br>
+                        <input type="password" placeholder="password"  class="navbar-brand" id="password" name="password"><br>
                         <br>
                         <input type="submit" class="navbar-brand" value="Log In">
                     </form>
