--- a/index.html
+++ b/index.html
@@ -17,20 +17,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-            <div class="container px-5">
-                <a class="navbar-brand" href="index.html">ARConnect</a>
-                <!-- <h1 class="nav-item">Subheading!</h1> -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html#scroll">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
-                        <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <script id="nav-placeholder" src="js/nav.js"></script>
         <!-- Header-->
         <header class="masthead text-center text-white">
             <div class="masthead-content">
@@ -101,7 +88,7 @@
         </section> -->
         <!-- Footer-->
         <footer class="py-5 bg-black" id="page-bottom">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Victor Sandru, Matthew Nguyen, Daniel Dinari, Oscar<br>@QHACKS 2022</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">Victor Sandru, Matthew Nguyen, Daniel Dinari, Oscar Lu<br>@QHACKS 2022</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
