--- a/login.html
+++ b/login.html
@@ -17,20 +17,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-            <div class="container px-5">
-                <a class="navbar-brand" href="index.html">AR Project Queens QHACKS</a>
-                <!-- <h1 class="nav-item">Subheading!</h1> -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html#scroll">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="signup.html">Sign Up</a></li>
-                        <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <script id="nav-placeholder" src="js/nav.js"></script>
         <!-- Form for login -->  
         <section>
              <header class="masthead text-center">
